--- a/index.html
+++ b/index.html
@@ -2,10 +2,32 @@
 <html>
   <head>
     <title>Muslim Daily Routine </title>
+    <script>
+      document.getElementById("date_home_page").innerHTML = Date();
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <h1>Let's start! </h1>
+    <h1>Welcome to Muslim Daily Routine </h1>
     <p> Your daily activities to be a better version of yourself! </p>
+
+    <h2>Date</h2>
+    <p id="date_home_page">day true js</p>
+
+    <h2> Welcome Assma ! </h2>
+    <img src="user_icon_vector.png" alt="Icon of User">
+
+    <table>
+      <tr>
+        <td>Time</td>
+        <td>My routine check-list</td>
+        <td><img src="idea_vector.jpeg" alt="Idea Icon for suggestions"></td>
+      </tr>
+      <tr>
+        <td>6.00 am</td>
+        <td>wake up</td>
+        <td>adkaar sabah</td>
+      </tr>
+    </table>
   </body>
 </html>
